Fix small mistakes in the style and formatting